<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mvvm.screens.calculator.CalculatorFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"
        />

    <TextView
        android:id="@+id/text_previous_calculations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="?attr/colorOnSecondary"
        android:alpha="0.4"
        android:text=""
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_current_calculations"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"/>

    <EditText
        android:id="@+id/edit_text_current_calculations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:focusable="false"
        android:gravity="end"
        android:focusableInTouchMode="false"
        android:inputType="text"
        android:maxWidth="400dp"
        android:maxLines="1"
        android:paddingEnd="-3dp"
        android:text=""
        android:textColor="?attr/colorOnSecondary"
        android:textSize="72sp"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintBottom_toTopOf="@+id/layout_keyboard"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        android:autofillHints="0"
        tools:ignore="LabelFor,RtlSymmetry" />

    <LinearLayout
        android:id="@+id/layout_keyboard"
        android:layout_width="0dp"
        android:layout_height="340dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:orientation="vertical">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_c"
                style="@style/ButtonSecondary"
                android:text="@string/erase"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign"
                style="@style/ButtonSecondary"
                android:gravity="center"
                app:icon="@drawable/ic_change_sign"
                app:iconGravity="textStart"
                app:iconTint="?attr/colorOnSecondary"
                app:iconPadding="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_percent"
                style="@style/ButtonSecondary"
                android:text="@string/percent"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/ButtonPrimary"
                android:text="@string/divide"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/seven"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/eight"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/nine"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/ButtonPrimary"
                android:text="@string/multiply"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/four"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/five"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/six"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/ButtonPrimary"
                android:text="@string/minus"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/one"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/two"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/three"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/ButtonPrimary"
                android:text="@string/plus"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_point"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/point"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/zero"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_remove"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:icon="@drawable/ic_erase"
                style="@style/ButtonSecondaryVariant"
                app:iconTint="?attr/colorOnSecondary"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equals"
                style="@style/ButtonPrimary"
                android:text="@string/equals"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>