<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mvvm.screens.converter.ConverterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"
        />

    <LinearLayout
        android:id="@+id/layout_second_currency"
        android:paddingBottom="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/second_divide"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left">

        <EditText
            android:id="@+id/edit_text_base_currency_value"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="start"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="0dp"
            android:text=""
            android:textColor="?attr/colorOnSecondary"
            android:textSize="32sp"
            android:autofillHints="1"
            tools:ignore="LabelFor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_base_currency"
            style="@style/ButtonSecondaryVariant"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            app:cornerRadius="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/usd"
            android:textAllCaps="true"
            android:layout_marginEnd="0dp"
            android:textSize="16sp"
            />
    </LinearLayout>
    <View
        android:id="@+id/second_divide"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@id/layout_first_currency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/colorOnSecondary"
        />

    <LinearLayout
        android:id="@+id/layout_first_currency"
        android:paddingBottom="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/first_divide"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left">
        <TextView
            android:id="@+id/text_result_currency_value"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:gravity="start"
            android:paddingVertical="0dp"
            android:text=""
            android:textColor="?attr/colorOnSecondary"
            android:textSize="32sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_result_currency"
            style="@style/ButtonSecondaryVariant"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            app:cornerRadius="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/euro"
            android:textAllCaps="true"
            android:layout_marginEnd="0dp"
            android:textSize="16sp"
            />
    </LinearLayout>
    <View
        android:id="@+id/first_divide"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@id/layout_keyboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/colorOnSecondary"
        />

    <LinearLayout
        android:paddingTop="21dp"
        android:id="@+id/layout_keyboard"
        android:layout_width="0dp"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        android:orientation="vertical">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_repeat"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/repeat"
                android:textSize="16sp"
                android:layout_gravity="top"
                android:textAllCaps="false"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_show"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/show"
                android:textSize="16sp"
                android:layout_gravity="top"
                android:textAllCaps="false"
                android:layout_marginEnd="0dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/seven"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/eight"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/nine"
                android:layout_marginEnd="0dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/four"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/five"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/six"
                android:layout_marginEnd="0dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/one"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/two"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/three"
                android:layout_marginEnd="0dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_point"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/point"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/ButtonSecondaryVariant"
                android:text="@string/zero"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_remove"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:icon="@drawable/ic_erase"
                android:layout_marginEnd="0dp"
                style="@style/ButtonSecondaryVariant"
                app:iconTint="?attr/colorOnSecondary"
                />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>